# imd_ai

./: .gitignore  .gitmodules  Chatbot.py  LICENSE  MultiAgent.py  README.md  pyproject.toml  pytorch.ipynb  teste.py  teste_tools.py  tools.py
datasets/: oil.csv
notebooks/: file_processing.ipynb
notebooks/recurrent/: modelo1.h5  oil_price.ipynb
notebooks/sei/: multiagent.ipynb
notebooks/synthetic_dataset_generation/: testing.ipynb  ticket_generation.ipynb
notebooks/traffic-sign-detection/: training.ipynb
streamlit_apps/sei_chatbot/: Chatbot.py  MultiAgent.py  tools.py
